--- a/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
@@ -88,7 +88,7 @@
 			compatible = "regulator-fixed";
 			reg = <2>;
 			regulator-name = "wm8962-supply";
-			gpio = <&gpio4 10 0>;
+			//gpio = <&gpio4 10 0>;
 			enable-active-high;
 		};
 
@@ -109,22 +109,28 @@
 			startup-delay-us = <500>;
 			enable-active-high;
 		};
-		wlreg_on: fixedregulator@100 {
-			compatible = "regulator-fixed";
-			regulator-min-microvolt = <5000000>;
-			regulator-max-microvolt = <5000000>;
-			regulator-name = "wlreg_on";
-			gpio = <&gpio4 7 0>;
-			startup-delay-us = <100>;
-			enable-active-high;
-		};
+		
+		//iob3200_gpio
+		customize-Gpio {
+			compatible = "customize,gpio";
+			status = "okay";
 
-		bcmdhd_wlan_1: bcmdhd_wlan@0 {
-			compatible = "android,bcmdhd_wlan";
-			wlreg_on-supply = <&wlreg_on>;
-		};
+			//lcd
+			LCD3P3V_Npwren = <&gpio4 5 0>;
+			LCD_BL_EN = <&gpio1 8 0>;
+			VDDLCD_PWREN = <&gpio7 12 0>;
+			
+			//tp
+			TP_PWR_EN = <&gpio4 10 0>;
+			
+			//usb hub
+			HUB_reset = <&gpio4 06 0>;
+			//AUX_3V15_EN=<&gpio6 9 0>;
+			AUX_5V=<&gpio6 10 1>;
+		};			
 	};
 
+	#if 0
 	gpio-keys {
 		compatible = "gpio-keys";
 		pinctrl-names = "default";
@@ -137,13 +143,6 @@
 			linux,code = <KEY_POWER>;
 		};
 
-		volume-up {
-			label = "Volume Up";
-			gpios = <&gpio1 4 1>;
-			gpio-key;
-			linux,code = <KEY_VOLUMEUP>;
-		};
-
 		volume-down {
 			label = "Volume Down";
 			gpios = <&gpio1 5 1>;
@@ -151,32 +150,28 @@
 			linux,code = <KEY_VOLUMEDOWN>;
 		};
 	};
-
+	#endif
+	
 	sound {
-		compatible = "fsl,imx6q-sabresd-wm8962",
-			   "fsl,imx-audio-wm8962";
-		model = "wm8962-audio";
-		cpu-dai = <&ssi2>;
-		audio-codec = <&codec>;
-		asrc-controller = <&asrc>;
-		audio-routing =
-			"Headphone Jack", "HPOUTL",
-			"Headphone Jack", "HPOUTR",
-			"Ext Spk", "SPKOUTL",
-			"Ext Spk", "SPKOUTR",
-			"MICBIAS", "AMIC",
-			"IN3R", "MICBIAS",
-			"DMIC", "MICBIAS",
-			"DMICDAT", "DMIC",
-			"CPU-Playback", "ASRC-Playback",
-			"Playback", "CPU-Playback",
-			"ASRC-Capture", "CPU-Capture",
-			"CPU-Capture", "Capture";
-		mux-int-port = <2>;
-		mux-ext-port = <3>;
-		hp-det-gpios = <&gpio7 8 1>;
-		mic-det-gpios = <&gpio1 9 1>;
-	};
+                compatible = "fsl,imx-audio-rt5631";
+                model = "rt5631-audio";
+                ssi-controller = <&ssi1>;
+                audio-codec = <&codec>;
+                audio-routing =
+                        "Headphone Jack", "HPOL",
+                        "Headphone Jack", "HPOR",
+                        "Ext Spk", "SPOL",
+                        "Ext Spk", "SPOR";
+                        //"MICBIAS", "AMIC",
+                        //"IN3R", "MICBIAS",
+                        //"DMIC", "MICBIAS",
+                        //"DMICDAT", "DMIC";
+                mux-int-port = <1>;
+                mux-ext-port = <4>;
+                hp-det-gpios = <&gpio7 8 1>;
+                mic-det-gpios = <&gpio7 11 1>;
+        };
+
 
 	sound-hdmi {
 		compatible = "fsl,imx6q-audio-hdmi",
@@ -227,105 +222,14 @@
 		status = "disabled";
 	};
 
-	lcd@0 {
-		compatible = "fsl,lcd";
-		ipu_id = <0>;
-		disp_id = <0>;
-		default_ifmt = "RGB565";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_ipu1>;
-		status = "okay";
-	};
-
-	mxcfb4: fb@3 {
-		compatible = "fsl,mxc_sdc_fb";
-		disp_dev = "ldb";
-		interface_pix_fmt = "RGB666";
-		default_bpp = <16>;
-		int_clk = <0>;
-		late_init = <0>;
-		status = "disabled";
-	};
-
-	lcd@0 {
-		compatible = "fsl,lcd";
-		ipu_id = <0>;
-		disp_id = <0>;
-		default_ifmt = "RGB565";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_ipu1>;
-		status = "okay";
-	};
-
-	pwm-backlight {
+	backlight {
 		compatible = "pwm-backlight";
-		pwms = <&pwm1 0 50000>;
-		brightness-levels = <
-			0  /*1  2  3  4  5  6*/  7  8  9
-			10 11 12 13 14 15 16 17 18 19
-			20 21 22 23 24 25 26 27 28 29
-			30 31 32 33 34 35 36 37 38 39
-			40 41 42 43 44 45 46 47 48 49
-			50 51 52 53 54 55 56 57 58 59
-			60 61 62 63 64 65 66 67 68 69
-			70 71 72 73 74 75 76 77 78 79
-			80 81 82 83 84 85 86 87 88 89
-			90 91 92 93 94 95 96 97 98 99
-			100
-			>;
-		default-brightness-level = <94>;
-	};
-
-	v4l2_cap_0 {
-		compatible = "fsl,imx6q-v4l2-capture";
-		ipu_id = <0>;
-		csi_id = <0>;
-		mclk_source = <0>;
+		pwms = <&pwm1 0 5000000>;
+		brightness-levels = <0 4 8 16 32 64 128 255>;
+		default-brightness-level = <7>;
 		status = "okay";
 	};
 
-	v4l2_cap_1 {
-		compatible = "fsl,imx6q-v4l2-capture";
-		ipu_id = <0>;
-		csi_id = <1>;
-		mclk_source = <0>;
-		status = "okay";
-	};
-
-	v4l2_out {
-		compatible = "fsl,mxc_v4l2_output";
-		status = "okay";
-	};
-
-	mipi_dsi_reset: mipi-dsi-reset {
-		compatible = "gpio-reset";
-		reset-gpios = <&gpio6 11 GPIO_ACTIVE_LOW>;
-		reset-delay-us = <50>;
-		#reset-cells = <0>;
-	};
-
-	minipcie_ctrl {
-		power-on-gpio = <&gpio3 19 0>;
-	};
-
-    bt_rfkill {
-                compatible = "fsl,mxc_bt_rfkill";
-                        bt-power-gpios = <&gpio1 2 0>;
-                                status ="okay";
-    };
-
-	ramoops_device {
-		compatible = "fsl,mxc_ramoops";
-		record_size = <524288>; /*512K*/
-		console_size = <262144>; /*256K*/
-		ftrace_size = <262144>;  /*256K*/
-		dump_oops = <1>;
-		status = "okay";
-	};
-
-	caam_keyblob {
-		compatible = "fsl,sec-v4.0-keyblob";
-	};
 
 	v4l2_cap_0 {
 		compatible = "fsl,imx6q-v4l2-capture";
@@ -402,58 +306,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
 	status = "okay";
-
-	codec: wm8962@1a {
-		compatible = "wlf,wm8962";
-		reg = <0x1a>;
-		clocks = <&clks 201>;
-		DCVDD-supply = <&reg_audio>;
-		DBVDD-supply = <&reg_audio>;
-		AVDD-supply = <&reg_audio>;
-		CPVDD-supply = <&reg_audio>;
-		MICVDD-supply = <&reg_audio>;
-		PLLVDD-supply = <&reg_audio>;
-		SPKVDD1-supply = <&reg_audio>;
-		SPKVDD2-supply = <&reg_audio>;
-		amic-mono;
-		gpio-cfg = <
-			0x0000 /* 0:Default */
-			0x0000 /* 1:Default */
-			0x0013 /* 2:FN_DMICCLK */
-			0x0000 /* 3:Default */
-			0x8014 /* 4:FN_DMICCDAT */
-			0x0000 /* 5:Default */
-		>;
-       };
-
-	mma8451@1c {
-		compatible = "fsl,mma8451";
-		reg = <0x1c>;
-		position = <0>;
-		vdd-supply = <&reg_sensor>;
-		vddio-supply = <&reg_sensor>;
-		interrupt-parent = <&gpio1>;
-		interrupts = <18 8>;
-		interrupt-route = <1>;
-	};
-
-	ov564x: ov564x@3c {
-		compatible = "ovti,ov564x";
-		reg = <0x3c>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_ipu1_2>;
-		clocks = <&clks IMX6QDL_CLK_CKO>;
-		clock-names = "csi_mclk";
-		DOVDD-supply = <&vgen4_reg>; /* 1.8v */
-		AVDD-supply = <&vgen3_reg>;  /* 2.8v, on rev C board is VGEN3,
-						on rev B board is VGEN5 */
-		DVDD-supply = <&vgen2_reg>;  /* 1.5v*/
-		pwn-gpios = <&gpio1 16 1>;   /* active low: SD1_DAT0 */
-		rst-gpios = <&gpio1 17 0>;   /* active high: SD1_DAT1 */
-		csi_id = <0>;
-		mclk = <24000000>;
-		mclk_source = <0>;
-	};
+	
 };
 
 &i2c2 {
@@ -465,14 +318,6 @@
 	hdmi: edid@50 {
 		compatible = "fsl,imx6-hdmi-i2c";
 		reg = <0x50>;
-	};
-
-	max11801@48 {
-		compatible = "maxim,max11801";
-		reg = <0x48>;
-		interrupt-parent = <&gpio3>;
-		interrupts = <26 2>;
-		work-mode = <1>;/*DCM mode*/
 	};
 
 	pmic: pfuze100@08 {
@@ -584,20 +429,19 @@
 		AVDD-supply = <&vgen3_reg>;  /* 2.8v, rev C board is VGEN3
 						rev B board is VGEN5 */
 		DVDD-supply = <&vgen2_reg>;  /* 1.5v*/
-		pwn-gpios = <&gpio1 19 1>;   /* active low: SD1_CLK */
-		rst-gpios = <&gpio1 20 0>;   /* active high: SD1_DAT2 */
+		//pwn-gpios = <&gpio1 19 1>;   /* active low: SD1_CLK */
+		//rst-gpios = <&gpio1 20 0>;   /* active high: SD1_DAT2 */
 		csi_id = <1>;
 		mclk = <24000000>;
 		mclk_source = <0>;
 	};
 
-	egalax_ts@04 {
-		compatible = "eeti,egalax_ts";
-		reg = <0x04>;
-		interrupt-parent = <&gpio6>;
-		interrupts = <8 2>;
-		wakeup-gpios = <&gpio6 8 0>;
-	};
+	codec: rt5631@1a {
+                  compatible = "realtek,rt5631";
+                  reg = <0x1a>;
+                  clocks = <&clks 201>;
+        };
+
 
 };
 
@@ -607,32 +451,37 @@
 	pinctrl-0 = <&pinctrl_i2c3>;
 	status = "okay";
 
-	egalax_ts@04 {
-		compatible = "eeti,egalax_ts";
-		reg = <0x04>;
-		interrupt-parent = <&gpio6>;
-		interrupts = <7 2>;
-		wakeup-gpios = <&gpio6 7 0>;
+	gt9xx@5d {
+    		compatible = "goodix,gt9xx";
+    		reg = <0x5d>;
+    		interrupt-parent = <&gpio1>;
+    		interrupts = <1 2>;
+
+    		goodix,irq-gpio = <&gpio1 1 0x00>;
+   		goodix,rst-gpio = <&gpio1 4 0x00>;
+    		pinctrl-names = "default";
+    		pinctrl-0 = <&mx6_gt9xx_pins>;
+    		status = "okay";
+    		goodix,cfg-group0 = [
+		 46  00  05  20  03  0A  FD  20  01  0A  28  
+	 	0F  50  3C  03  05  00  00  00  00  00  00  
+	 	03  18  1A  1E  14  8F  2F  99  22  24  A6  
+	 	0F  00  00  00  02  03  11  00  00  00  00  
+	 	00  00  00  00  00  06  00  18  50  94  C5  
+	 	02  07  17  00  04  92  1B  00  80  22  00  
+	 	70  2C  00  67  38  00  61  47  00  61  00  
+	 	00  00  00  00  00  00  00  00  00  00  00  
+	 	00  00  00  00  00  00  00  00  00  00  00  
+	 	00  00  00  00  00  00  00  00  00  00  00  
+	 	00  00  17  16  15  14  11  10  0F  0E  0D  
+	 	0C  09  08  07  06  05  04  01  00  FF  FF  
+	 	00  00  00  00  00  00  00  00  00  00  00  
+	 	02  04  06  07  08  0A  0C  0D  0F  10  11  
+	 	12  13  14  19  1B  1C  1E  1F  20  21  22  
+	 	23  24  25  26  27  28  29  FF  FF  00  00  
+	 	00  00  00  00  00  00  00  00  D6  01];
 	};
 
-	mag3110@0e {
-		compatible = "fsl,mag3110";
-		reg = <0x0e>;
-		position = <1>;
-		vdd-supply = <&reg_sensor>;
-		vddio-supply = <&reg_sensor>;
-		interrupt-parent = <&gpio3>;
-		interrupts = <16 1>;
-	};
-
-	isl29023@44 {
-		compatible = "fsl,isl29023";
-		reg = <0x44>;
-		rext = <499>;
-		vdd-supply = <&reg_sensor>;
-		interrupt-parent = <&gpio3>;
-		interrupts = <9 2>;
-	};
 };
 
 &iomuxc {
@@ -652,32 +501,43 @@
 				MX6QDL_PAD_ENET_TXD1__GPIO1_IO29 0x80000000
 				MX6QDL_PAD_EIM_D22__GPIO3_IO22  0x80000000
 				MX6QDL_PAD_ENET_CRS_DV__GPIO1_IO25 0x80000000
-				MX6QDL_PAD_EIM_D26__GPIO3_IO26 0x80000000
 				MX6QDL_PAD_EIM_CS1__GPIO2_IO24 0x80000000
 				MX6QDL_PAD_ENET_RXD0__GPIO1_IO27 0x80000000
 				MX6QDL_PAD_EIM_A25__GPIO5_IO02 0x80000000
 				MX6QDL_PAD_EIM_D23__GPIO3_IO23 0x80000000
 				MX6QDL_PAD_EIM_EB3__GPIO2_IO31 0x80000000
-				MX6QDL_PAD_SD1_CMD__GPIO1_IO18 0x80000000
 				MX6QDL_PAD_EIM_D16__GPIO3_IO16 0x80000000
 				MX6QDL_PAD_SD3_RST__GPIO7_IO08	0x80000000
-				MX6QDL_PAD_GPIO_9__GPIO1_IO09 	0x80000000
+				//MX6QDL_PAD_GPIO_9__GPIO1_IO09 	0x80000000
 				MX6QDL_PAD_EIM_DA9__GPIO3_IO09 0x80000000
-				MX6QDL_PAD_GPIO_1__WDOG2_B 0x80000000
-                MX6QDL_PAD_GPIO_2__GPIO1_IO02 0x1b0b0
+				//MX6QDL_PAD_GPIO_1__WDOG2_B 0x80000000
 				MX6QDL_PAD_NANDF_CS0__GPIO6_IO11 0x80000000
 				MX6QDL_PAD_NANDF_CS1__GPIO6_IO14 0x80000000
 				MX6QDL_PAD_NANDF_CS2__GPIO6_IO15 0x80000000
 				MX6QDL_PAD_NANDF_CS3__GPIO6_IO16 0x80000000
+				//lcd
+				MX6QDL_PAD_GPIO_19__GPIO4_IO05 0x80000000
+				MX6QDL_PAD_GPIO_8__GPIO1_IO08 0x80000000
+				MX6QDL_PAD_GPIO_17__GPIO7_IO12 0x80000000	
+				//tp
+				MX6QDL_PAD_KEY_COL2__GPIO4_IO10 0x80000000
+				//usb_hub
+				MX6QDL_PAD_KEY_COL0__GPIO4_IO06 0x80000000
+				//MX6QDL_PAD_NANDF_WP_B__GPIO6_IO9 0x80000000
+
+				MX6QDL_PAD_NANDF_RB0__GPIO6_IO10 0x80000000
+				//MX6QDL_PAD_SD3_RST__GPIO7_IO8    0x80000000
+				MX6QDL_PAD_GPIO_16__GPIO7_IO11   0x80000000
+				MX6QDL_PAD_GPIO_7__GPIO1_IO07    0x80000000
 			>;
 		};
 
 		pinctrl_audmux: audmuxgrp {
 			fsl,pins = <
-				MX6QDL_PAD_CSI0_DAT7__AUD3_RXD		0x130b0
-				MX6QDL_PAD_CSI0_DAT4__AUD3_TXC		0x130b0
-				MX6QDL_PAD_CSI0_DAT5__AUD3_TXD		0x110b0
-				MX6QDL_PAD_CSI0_DAT6__AUD3_TXFS		0x130b0
+				MX6QDL_PAD_SD2_DAT0__AUD4_RXD  0x130b0
+				MX6QDL_PAD_SD2_DAT3__AUD4_TXC  0x130b0
+				MX6QDL_PAD_SD2_DAT2__AUD4_TXD  0x110b0
+				MX6QDL_PAD_SD2_DAT1__AUD4_TXFS 0x130b0
 			>;
 		};
 
@@ -685,7 +545,7 @@
 			fsl,pins = <
 				MX6QDL_PAD_KEY_COL1__ECSPI1_MISO	0x100b1
 				MX6QDL_PAD_KEY_ROW0__ECSPI1_MOSI	0x100b1
-				MX6QDL_PAD_KEY_COL0__ECSPI1_SCLK	0x100b1
+				//MX6QDL_PAD_KEY_COL0__ECSPI1_SCLK	0x100b1
 			>;
 		};
 
@@ -712,21 +572,20 @@
 
 		pinctrl_enet_irq: enetirqgrp {
 			fsl,pins = <
-				MX6QDL_PAD_GPIO_6__ENET_IRQ		0x000b1
+				//MX6QDL_PAD_GPIO_6__ENET_IRQ		0x000b1
 			>;
 		};
 
 		pinctrl_gpio_keys: gpio_keysgrp {
 			fsl,pins = <
 				MX6QDL_PAD_EIM_D29__GPIO3_IO29 0x80000000
-				MX6QDL_PAD_GPIO_4__GPIO1_IO04  0x80000000
 				MX6QDL_PAD_GPIO_5__GPIO1_IO05  0x80000000
 			>;
 		};
 
 		pinctrl_hdmi_cec: hdmicecgrp {
 			fsl,pins = <
-				MX6QDL_PAD_KEY_ROW2__HDMI_TX_CEC_LINE 0x108b0
+				//MX6QDL_PAD_KEY_ROW2__HDMI_TX_CEC_LINE 0x108b0
 			>;
 		};
 
@@ -753,7 +612,7 @@
 
 		pinctrl_i2c3: i2c3grp {
 			fsl,pins = <
-				MX6QDL_PAD_GPIO_3__I2C3_SCL		0x4001b8b1
+				MX6QDL_PAD_GPIO_5__I2C3_SCL		0x4001b8b1
 				MX6QDL_PAD_GPIO_6__I2C3_SDA		0x4001b8b1
 			>;
 		};
@@ -811,7 +670,7 @@
 
 		pinctrl_pwm1: pwm1grp {
 			fsl,pins = <
-				MX6QDL_PAD_SD1_DAT3__PWM1_OUT		0x1b0b1
+				MX6QDL_PAD_GPIO_9__PWM1_OUT	 0x1b0b1
 			>;
 		};
 
@@ -821,6 +680,13 @@
 				MX6QDL_PAD_CSI0_DAT11__UART1_RX_DATA	0x1b0b1
 			>;
 		};
+
+		pinctrl_uart2: uart2grp {
+                        fsl,pins = <
+                                MX6QDL_PAD_EIM_D26__UART2_TX_DATA      0x1b0b1
+                                MX6QDL_PAD_EIM_D27__UART2_RX_DATA       0x1b0b1
+                        >;
+                };
 
 		pinctrl_uart5_1: uart5grp-1 {
 			fsl,pins = <
@@ -846,17 +712,17 @@
 			>;
 		};
 
-		pinctrl_usdhc2: usdhc2grp {
-			fsl,pins = <
-				MX6QDL_PAD_SD2_CMD__SD2_CMD		0x17059
-				MX6QDL_PAD_SD2_CLK__SD2_CLK		0x10059
-				MX6QDL_PAD_SD2_DAT0__SD2_DATA0		0x17059
-				MX6QDL_PAD_SD2_DAT1__SD2_DATA1		0x17059
-				MX6QDL_PAD_SD2_DAT2__SD2_DATA2		0x17059
-				MX6QDL_PAD_SD2_DAT3__SD2_DATA3		0x17059
-				MX6QDL_PAD_KEY_ROW0__GPIO4_IO07		0x13069	/* WL_REG_ON */
-			>;
-		};
+		pinctrl_usdhc1: usdhc1grp {
+                        fsl,pins = <
+                                MX6QDL_PAD_SD1_CMD__SD1_CMD             0x17059
+                                MX6QDL_PAD_SD1_CLK__SD1_CLK             0x10059
+                                MX6QDL_PAD_SD1_DAT0__SD1_DATA0          0x17059
+                                MX6QDL_PAD_SD1_DAT1__SD1_DATA1          0x17059
+                                MX6QDL_PAD_SD1_DAT2__SD1_DATA2          0x17059
+                                MX6QDL_PAD_SD1_DAT3__SD1_DATA3          0x17059
+                        >;
+                };
+
 
 		pinctrl_usdhc3: usdhc3grp {
 			fsl,pins = <
@@ -881,13 +747,19 @@
 				MX6QDL_PAD_SD4_DAT1__SD4_DATA1		0x17059
 				MX6QDL_PAD_SD4_DAT2__SD4_DATA2		0x17059
 				MX6QDL_PAD_SD4_DAT3__SD4_DATA3		0x17059
-				MX6QDL_PAD_SD4_DAT4__SD4_DATA4		0x17059
-				MX6QDL_PAD_SD4_DAT5__SD4_DATA5		0x17059
-				MX6QDL_PAD_SD4_DAT6__SD4_DATA6		0x17059
-				MX6QDL_PAD_SD4_DAT7__SD4_DATA7		0x17059
+				//MX6QDL_PAD_SD4_DAT4__SD4_DATA4		0x17059
+				//MX6QDL_PAD_SD4_DAT5__SD4_DATA5		0x17059
+				//MX6QDL_PAD_SD4_DAT6__SD4_DATA6		0x17059
+				//MX6QDL_PAD_SD4_DAT7__SD4_DATA7		0x17059
 			>;
 		};
-
+		mx6_gt9xx_pins:gt9xx {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_4__GPIO1_IO04  0x80000000
+				MX6QDL_PAD_GPIO_1__GPIO1_IO01  0x80000000
+			>;
+	
+		};
 	};
 };
 
@@ -937,20 +809,21 @@
 	lvds-channel@0 {
 		fsl,data-mapping = "spwg";
 		fsl,data-width = <18>;
+		primary;
 		status = "okay";
 
 		display-timings {
 			native-mode = <&timing0>;
-			timing0: hsd100pxn1 {
-				clock-frequency = <65000000>;
-				hactive = <1024>;
-				vactive = <768>;
-				hback-porch = <220>;
+			timing0: P070BAGCM1 {
+				clock-frequency = <71000000>;
+				hactive = <1280>;
+				vactive = <800>;
+				hback-porch = <40>;
 				hfront-porch = <40>;
-				vback-porch = <21>;
-				vfront-porch = <7>;
-				hsync-len = <60>;
-				vsync-len = <10>;
+				vback-porch = <10>;
+				vfront-porch = <3>;
+				hsync-len = <10>;
+				vsync-len = <12>;
 			};
 		};
 	};
@@ -958,7 +831,7 @@
 	lvds-channel@1 {
 		fsl,data-mapping = "spwg";
 		fsl,data-width = <18>;
-		primary;
+
 		status = "okay";
 
 		display-timings {
@@ -997,13 +870,18 @@
 
 &pcie {
 	power-on-gpio = <&gpio3 19 0>;
-	reset-gpio = <&gpio7 12 0>;
+	//reset-gpio = <&gpio7 12 0>;
 	status = "okay";
 };
 
 &pwm1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm1>;
+	status = "okay";
+};
+
+&ssi1 {
+	fsl,mode = "i2s-slave";
 	status = "okay";
 };
 
@@ -1018,11 +896,10 @@
 	status = "okay";
 };
 
-&uart5 {
-    pinctrl-names = "default";
-    pinctrl-0 = <&pinctrl_uart5_1>;
-    fsl,uart-has-rtscts;
-    status = "okay";
+&uart2 {
+        pinctrl-names = "default";
+        pinctrl-0 = <&pinctrl_uart2>;
+        status = "okay";
 };
 
 &usbh1 {
@@ -1041,26 +918,23 @@
 	status = "okay";
 };
 
-&usdhc2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_usdhc2>;
-	bus-width = <4>;
-	cd-gpios = <&gpio2 2 0>;
-	wp-gpios = <&gpio2 3 0>;
-	no-1-8-v;
-	wifi-host;
-	pm-ignore-notify;
-	keep-power-in-suspend;
-	enable-sdio-wakeup;
-	status = "okay";
+&usdhc1 {
+        pinctrl-names = "default";
+        pinctrl-0 = <&pinctrl_usdhc1>;
+        cd-gpios = <&gpio1 7 0>;
+        no-1-8-v;
+        keep-power-in-suspend;
+        enable-sdio-wakeup;
+        status = "okay";
 };
 
 &usdhc3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc3>;
+	non-removable;
 	bus-width = <8>;
-	cd-gpios = <&gpio2 0 0>;
-	wp-gpios = <&gpio2 1 0>;
+	//cd-gpios = <&gpio2 0 0>;
+	//wp-gpios = <&gpio2 1 0>;
 	no-1-8-v;
 	keep-power-in-suspend;
 	enable-sdio-wakeup;
@@ -1070,7 +944,8 @@
 &usdhc4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc4>;
-	bus-width = <8>;
+	bus-width = <4>;
+	//cd-gpios = <&gpio2 0 0>;
 	non-removable;
 	no-1-8-v;
 	keep-power-in-suspend;
