--- a/sound/soc/fsl/Kconfig
+++ b/sound/soc/fsl/Kconfig
@@ -311,6 +311,19 @@ config SND_SOC_IMX_WM8962_ANDROID
 	  Say Y if you want to add support for SoC audio on an i.MX board with
 	  a wm8962 codec in android.
 
+config SND_SOC_IMX_TLV320AIC3X
+	tristate "SoC Audio support for i.MX boards with tlv320aic3x"
+	depends on OF && I2C
+	select SND_SOC_WM8962
+	select SND_SOC_TLV320AIC3X
+	select SND_SOC_IMX_PCM_DMA
+	select SND_SOC_IMX_AUDMUX
+	select SND_SOC_FSL_SSI
+	select SND_SOC_FSL_UTILS
+	help
+	  Say Y if you want to add support for SoC audio on an i.MX board with
+	  a tlv320aic3x codec.
+	  
 config SND_SOC_IMX_SGTL5000
 	tristate "SoC Audio support for i.MX boards with sgtl5000"
 	depends on OF && I2C
@@ -371,7 +384,7 @@ config SND_SOC_IMX_SI476X
 	  Say Y if you want to add support for Soc audio for the AMFM Tuner chip
 	  SI476x module.
 
-#ADD RT5631 codec
+#ADD rt5631 codec
 config SND_SOC_IMX_RT5631
     tristate "SoC Audio support for i.MX boards with rt5631"
     depends on OF && I2C
@@ -383,7 +396,6 @@ config SND_SOC_IMX_RT5631
     help
       Say Y if you want to add support for SoC audio on an i.MX board with
       a rt5631 codec.	  
-
 endif # SND_IMX_SOC
 
 endmenu
