--- a/arch/arm/configs/imx_v7_android_defconfig
+++ b/arch/arm/configs/imx_v7_android_defconfig
@@ -1625,26 +1625,30 @@ CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 # CONFIG_RTL8187 is not set
-CONFIG_RTL8188EU=m
+# CONFIG_RTL8188EU is not set
 # CONFIG_MAC80211_HWSIM is not set
 # CONFIG_WIFI_CONTROL_FUNC is not set
 # CONFIG_ATH_CARDS is not set
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
-# CONFIG_BCMDHD is not set
+CONFIG_BCMDHD=y
+CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcm43438a1.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/firmware/config.txt"
+CONFIG_BCMDHD_SDIO=y
+CONFIG_BCMDHD_OOB=y
+# CONFIG_BCMDHD_SDIO_IRQ is not set
+CONFIG_BRCMUTIL=y
 # CONFIG_BRCMSMAC is not set
-# CONFIG_BRCMFMAC is not set
+CONFIG_BRCMFMAC=y
+CONFIG_BRCMFMAC_SDIO=y
+# CONFIG_BRCMFMAC_USB is not set
+# CONFIG_BRCM_TRACING is not set
+# CONFIG_BRCMDBG is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_P54_COMMON is not set
 # CONFIG_RT2X00 is not set
-CONFIG_RTL_CARDS=y
-CONFIG_RTL8192CU=y
-CONFIG_RTLWIFI=y
-CONFIG_RTLWIFI_USB=y
-CONFIG_RTLWIFI_DEBUG=y
-CONFIG_RTL8192C_COMMON=y
-# CONFIG_RTL8821AS is not set
+# CONFIG_RTL_CARDS is not set
 # CONFIG_WL_TI is not set
 # CONFIG_ZD1211RW is not set
 # CONFIG_MWIFIEX is not set
@@ -2832,31 +2836,35 @@ CONFIG_SND_SOC_FSL_HDMI=y
 CONFIG_SND_SOC_IMX_PCM_DMA=y
 CONFIG_SND_SOC_IMX_AUDMUX=y
 CONFIG_SND_IMX_SOC=y
+CONFIG_SND_SOC_IMX_SSI=y
 CONFIG_SND_SOC_IMX_PCM_FIQ=y
 CONFIG_SND_SOC_IMX_HDMI_DMA=y
 
 #
 # SoC Audio support for Freescale i.MX boards:
 #
-# CONFIG_SND_SOC_EUKREA_TLV320 is not set
+CONFIG_SND_SOC_EUKREA_TLV320=y
 # CONFIG_SND_SOC_IMX_CS42888 is not set
 # CONFIG_SND_SOC_IMX_SII902X is not set
 # CONFIG_SND_SOC_IMX_WM8958 is not set
 # CONFIG_SND_SOC_IMX_WM8960 is not set
 # CONFIG_SND_SOC_IMX_WM8962 is not set
+CONFIG_SND_SOC_IMX_TLV320AIC3X=y
 # CONFIG_SND_SOC_IMX_SGTL5000 is not set
 # CONFIG_SND_SOC_IMX_MQS is not set
 # CONFIG_SND_SOC_IMX_SPDIF is not set
 # CONFIG_SND_SOC_IMX_MC13783 is not set
 CONFIG_SND_SOC_IMX_HDMI=y
 # CONFIG_SND_SOC_IMX_SI476X is not set
-CONFIG_SND_SOC_IMX_RT5631=y
+# CONFIG_SND_SOC_IMX_RT5631 is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_SND_SOC_CS42XX8=y
 CONFIG_SND_SOC_CS42XX8_I2C=y
 CONFIG_SND_SOC_HDMI_CODEC=y
-CONFIG_SND_SOC_RT5631=y
 CONFIG_SND_SOC_SI476X=y
+CONFIG_SND_SOC_TLV320AIC23=y
+CONFIG_SND_SOC_TLV320AIC3X=y
+CONFIG_SND_SOC_WM8962=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
