--- a/arch/arm/configs/imx_v7_android_defconfig
+++ b/arch/arm/configs/imx_v7_android_defconfig
@@ -1750,6 +1750,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_CYTTSP4_CORE is not set
 # CONFIG_TOUCHSCREEN_DA9052 is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
+CONFIG_TOUCHSCREEN_PPC4207_Ilitek=y
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
 # CONFIG_TOUCHSCREEN_EETI is not set
 # CONFIG_TOUCHSCREEN_EGALAX is not set
@@ -2749,7 +2750,8 @@ CONFIG_FB_MXC_SYNC_PANEL=y
 CONFIG_FB_MXC_LDB=y
 CONFIG_FB_MXC_MIPI_DSI=y
 # CONFIG_FB_MXC_MIPI_DSI_SAMSUNG is not set
-CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
+# CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL is not set
+# CONFIG_FB_MXC_N070ICN_WXGA is not set
 CONFIG_FB_MXC_HDMI=y
 CONFIG_FB_MXC_EDID=y
 CONFIG_FB_MXC_EINK_PANEL=y
