--- a/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
@@ -317,6 +317,8 @@
 };
 #endif
 
+#if 0
+//ppc-4407
 &fec {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_enet>;
@@ -325,12 +327,28 @@
 	fsl,magic-packet;
 	status = "okay";
 };
+#endif
 
 &i2c1 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
 	status = "okay";
+
+	//yangbo test
+    	ilitek@41 {
+        	compatible = "tchip,ilitek";
+        	reg = <0x41>;
+        	interrupt-parent = <&gpio1>;
+        	interrupts = <01 3>;
+        	//vdd-supply = <&pm8916_l17>;
+        	//vcc_i2c-supply = <&pm8916_l6>;
+        	ilitek,irq-gpio = <&gpio4 27 0>;
+        	ilitek,reset-gpio = <&gpio4 26 0>;
+        	ilitek,vbus = "vcc_i2c";
+        	ilitek,vdd = "vdd";
+        	ilitek,name = "ilitek_i2c";
+    	};
 
 	mma8451@1c {
 		compatible = "fsl,mma8451";
@@ -561,6 +579,8 @@
 			5 /* AIC3X_GPIO2_FUNC_DIGITAL_MIC_INPUT */
 		>;	
 	};
+
+	#if 0
 	//emb2230 tp
 	goodix_ts@5d {
 		compatible = "goodix,gt9xx";
@@ -608,7 +628,8 @@
 			18 16 14 13 12 10 0F 0C 0A 08 06 
 			04 02 00 00 00 00 00 00 00 00 00 
 			00 00 00 00 00 00 00 00 3C 01];
-	};	
+	};
+	#endif	
 };
 
 &i2c3 {
